--- a/package.json
+++ b/package.json
@@ -10,17 +10,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-sans": "^0.2.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.x",
+    "@react-navigation/stack": "^5.x",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "18.0.1",
     "@types/react-native": "~0.66.13",
+    "@types/styled-components": "^5.1.25",
     "typescript": "~4.3.5"
   },
   "private": true
